--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
 body {
-  width: 1200px;
+  width: 1146px;
   margin: 0 auto;
-  padding: 9px 27px;
+  padding: 5px 27px;
+
   font-family: 'Roboto', 'Arial', sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: #323232;
   text-transform: none;
+
   background-color: #849D8F;
 }
 
@@ -17,9 +19,11 @@ input[type="radio"].visually-hidden {
   width: 1px;
   height: 1px;
   margin: -1px;
-  border: 0;
   padding: 0;
+
   white-space: nowrap;
+
+  border: 0;
   clip-path: inset(100%);
   clip: rect(0, 0, 0, 0);
   overflow: hidden;
@@ -31,6 +35,7 @@ input[type="radio"].visually-hidden {
   text-decoration: none;
   text-align: center;
   color: #fefefe;
+
   box-shadow: 0 1px 2px 0 #ac1000;
   background-image: linear-gradient(to top, #e74a35, #f26843);
   border-radius: 50px;
@@ -40,6 +45,7 @@ input[type="radio"].visually-hidden {
 .button:hover {
   text-decoration: none;
   color: #fefefe;
+
   box-shadow: 0 2px 2px 0 #ac1000;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)),
                     linear-gradient(to top, #e74a35, #f26843);
@@ -71,6 +77,7 @@ input[type="text"],
 input[type="password"],
 input[type="email"] {
   padding: 15px;
+
   font-size: 16px;
   font-weight: bold;
   line-height: 1.5;
@@ -123,6 +130,8 @@ a:hover {
 .header__menu {
   flex-grow: 1;
   padding-left: 10px;
+  margin: 24px 0;
+
   font-size: 16px;
   font-weight: 700;
 }
@@ -130,10 +139,12 @@ a:hover {
 .header__menu-inner {
   display: none;
   padding: 0;
+
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
   white-space: nowrap;
+
   background-color: #F8F7F4;
 }
 
@@ -146,8 +157,10 @@ a:hover {
 
 .header__menu-inner-item--bold {
   padding-bottom: 3px;
+
   font-size: 14px;
   font-weight: 700;
+
   border-bottom: 1px solid rgba(50, 50, 50, .2);
 }
 
@@ -158,6 +171,7 @@ a:hover {
 .header__menu-item {
   position: relative;
   display: inline-block;
+
   font-size: 16px;
   font-weight: 700;
 }
@@ -251,7 +265,6 @@ a.header__menu-inner-link--active {
 .header__find-link img {
   width: 17px;
   height: 17px;
-
   padding: 8px;
   object-fit: contain;
 }
@@ -457,10 +470,11 @@ a.header__menu-inner-link--active {
   color: #fefefe;
 }
 
-.header__user-buttons-find, .header__user-buttons-enter {
+.header__user-buttons-find,
+.header__user-buttons-enter {
   position: relative;
 
-  padding-right: 10px;
+  padding-right: 9px;
 }
 
 .header__user-buttons--style {
@@ -489,12 +503,13 @@ a.header__menu-inner-link--active {
 
 .header__user-buttons-basket {
   position: relative;
+  margin-right: -9px;
 }
 
 .header__user-buttons-basket img,
 .header__enter-link img {
   display: inline;
-  padding: 8px 0;
+  padding: 8px 3px;
 
   vertical-align: middle;
 }
@@ -507,7 +522,7 @@ a.header__menu-inner-link--active {
   display: inline-block;
 
   font-weight: 700;
-  line-height: .5;
+  line-height: 0;
   color: #FFFFFF;
 }
 
@@ -520,7 +535,10 @@ a.header__menu-inner-link--active {
 }
 
 .contacts__worktime {
+  margin: 9px 0;
+
   font-size: 14px;
+  text-align: right;
 }
 
 /* Выше блок с контактами */
@@ -544,7 +562,8 @@ a.header__menu-inner-link--active {
 }
 
 .carousel__slide h2 {
-  margin-top: -5em;
+  margin-top: -281px;
+  margin-bottom: 34px;
   font-weight: 700;
   font-size: 60px;
   color: #FFFFFF;
@@ -561,7 +580,7 @@ a.header__menu-inner-link--active {
 
 .carousel__slider-buttons {
   position: absolute;
-  bottom: 90px;
+  bottom: 75px;
   left: 0;
   font-size: 0;
 }
@@ -620,7 +639,7 @@ a.header__menu-inner-link--active {
 .gifts {
   display: flex;
   justify-content: space-between;
-  margin-top: -7em;
+  margin-top: -100px;
   padding: 0;
 }
 
@@ -649,7 +668,7 @@ a.header__menu-inner-link--active {
 .gifts-item__link {
   position: absolute;
   right: 21px;
-  bottom: 23px;
+  bottom: 25px;
   display: flex;
   padding: 14px 21px;
   font-size: 18px;
@@ -895,19 +914,20 @@ a.header__menu-inner-link--active {
 .catalog-item img {
   border-radius: 50%;
 }
+
 .catalog__item {
   display: inline-block;
-  padding: 5px 14px;
-  margin-top: -3em;
+  padding: 6px 0;
+  margin-top: -31px;
   width: 272px;
   height: 405px;
 
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .catalog-item-cost {
-  margin-top: -60px;
+  margin-top: -68px;
 
   text-align: left;
 }
@@ -928,6 +948,9 @@ a.header__menu-inner-link--active {
 }
 
 .catalog-item__title {
+  margin-top: 28px;
+  padding: 0 10px;
+
   font-weight: 500;
   font-size: 16px;
   text-align: center;
@@ -937,6 +960,7 @@ a.header__menu-inner-link--active {
   display: flex;
   flex-wrap: wrap;
   padding: 3em 0 0 0;
+  justify-content: space-between;
 }
 
 .gifts-item {
@@ -974,8 +998,9 @@ a.header__menu-inner-link--active {
 
 .benefits {
   display: block;
-  padding: 20px;
-  margin: 20px;
+  padding: 4px 20px;
+  margin: 0;
+  margin-top: -68px;
 
   color: #323232;
 
@@ -985,6 +1010,8 @@ a.header__menu-inner-link--active {
 }
 
 .benefits__header {
+  margin-bottom: 0;
+
   font-weight: 500;
   font-size: 24px;
 }
@@ -1027,22 +1054,24 @@ a.header__menu-inner-link--active {
 
 .benefits__list-item-text {
   display: table-cell;
-  padding: 13px 6px;
+  padding: 12px 4px 0 9px;
+
   font-size: 16px;
   font-weight: 400;
+  line-height: 22px;
 }
 
 .articles__stock {
   display: flex;
+  justify-content: space-between;
+  padding-top: 38px;
 }
 
 .article {
   position: relative;
-
   display: inline-block;
-  width: 552px;
-  height: 213px;
-  margin: 30px;
+  width: 560px;
+  height: 220px;
 
   background-image: url(../img/articles__background.jpeg);
   background-size: cover;
@@ -1054,7 +1083,7 @@ a.header__menu-inner-link--active {
 .article__content {
   position: absolute;
 
-  margin: 20px;
+  margin: 30px 19px;
 
   color: #323232;
 }
@@ -1090,9 +1119,8 @@ a.header__menu-inner-link--active {
   position: relative;
 
   display: inline-block;
-  width: 552px;
-  height: 213px;
-  margin: 30px;
+  width: 549px;
+  height: 211px;
 
   background-color: #F8F7F4;
   border: 4px solid transparent;
@@ -1102,20 +1130,22 @@ a.header__menu-inner-link--active {
 }
 
 .subscribes__text {
-  margin: 30px;
+  margin: 33px 20px;
 
   font-size: 16px;
   font-weight: 400;
+  line-height: 22px;
   color: #5a5a5a;
 }
 
 .subscribes__form {
   display: block;
-  margin: 30px;
+  margin: 18px;
 }
 
-.subscribes__input {
-  min-width: 300px;
+input[type="email"].subscribes__input {
+  min-width: 348px;
+  padding: 10px;
 }
 
 .subscribes__button {
@@ -1128,6 +1158,7 @@ a.header__menu-inner-link--active {
   position: relative;
 
   padding: 10px;
+  margin: 29px -36px -22px -37px;
 }
 
 .address {
