--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,10 @@ input[type="radio"].visually-hidden {
                     linear-gradient(to bottom, #e74a35, #f26843);
 }
 
+.text-align-right {
+  text-align: right;
+}
+
 .header__menu,
 .gifts,
 .catalog,
@@ -867,35 +871,45 @@ sort_type::-ms-expand {
 }
 
 .form-group-style-range::-webkit-slider-runnable-track {
+  vertical-align: middle;
+
   width: 100%;
   height: 4px;
   cursor: pointer;
-  background: #f8f7f4;
+  background: red;
+  opacity: 0.5;
 }
 
 .form-group-style-range::-webkit-slider-thumb {
-  background-image: url(../img/filter-button.svg);
   height: 22px;
   width: 20px;
-  cursor: pointer;
-  -webkit-appearance: none;
   margin-top: -8px;
+
+  background-image: url(../img/filter-button.svg);
+  opacity: 1;
+  cursor: pointer;
+
+  -webkit-appearance: none;
 }
 
 .form-group-style-range::-moz-range-track {
   width: 100%;
   height: 4px;
-  cursor: pointer;
+
   background: #f8f7f4;
+  cursor: pointer;
 }
 
 .form-group-style-range::-moz-range-thumb {
-  background-image: url(../img/filter-button.svg);
   height: 22px;
   width: 20px;
-  cursor: pointer;
-  -webkit-appearance: none;
   margin-top: -10px;
+
+  background-image: url(../img/filter-button.svg);
+  opacity: 1;
+  cursor: pointer;
+
+  -webkit-appearance: none;
 }
 
 .form-group-style-range::-ms-track {
@@ -911,20 +925,29 @@ sort_type::-ms-expand {
 .form-group-style-range::-ms-fill-lower {
   background: #f8f7f4;
 }
+
 .form-group-style-range::-ms-fill-upper {
   background: #f8f7f4;
 }
+
 .form-group-style-range::-ms-thumb {
   background-image: url(../img/filter-button.svg);
   height: 22px;
   width: 20px;
   cursor: pointer;
+  opacity: 1;
 }
+
 .form-group-style-range:focus::-ms-fill-lower {
   background: #f8f7f4;
 }
+
 .form-group-style-range:focus::-ms-fill-upper {
   background: #f8f7f4;
+}
+
+.range__min-price {
+  position: absolute;
 }
 
 /* Выше стили для input[type="range"] на странице каталога */
@@ -1202,7 +1225,7 @@ input[type="email"].subscribes__input {
 .map {
   position: relative;
 
-  height: 450px;
+  height: 430px;
   margin: 29px -36px 0 -36px;
 
   background-image: url("../img/map.jpeg");
@@ -1211,32 +1234,32 @@ input[type="email"].subscribes__input {
 
 .address {
   position: absolute;
-  top: 63px;
-  right: 27px;
-
-  padding: 32px 25px;
-  width: 305px;
+  top: 74px;
+  right: 36px;
+  padding: 28px 25px;
+  width: 252px;
 
   text-align: left;
   line-height: 1.43;
   color: #323232;
 
   background-color: #FFFFFF;
-  border-radius: 20px;
+  border-radius: 15px;
 }
 
 .address__text {
   display: inline-block;
   margin: 0;
-  padding-bottom: 5px;
 
   font-size: 14px;
   font-weight: 400;
+  line-height: 20px;
 }
 
 .address__text--bold {
   font-size: 18px;
   font-weight: 700;
+  line-height: 24px;
 }
 
 .address__text--br {
@@ -1426,14 +1449,14 @@ input[type="email"].subscribes__input {
   left: 30%;
   top: 10%;
   min-width: 478px;
-  padding: 20px 24px;
   z-index: 999999;
+}
+
+.call-back__window {
+  padding: 20px 24px;
 
   background-color: #f8f7f4;
   border-radius: 10px;
-
-  opacity: 0;
-  visibility: hidden;
 }
 
 @keyframes shudder {
@@ -1454,7 +1477,7 @@ input[type="email"].subscribes__input {
   }
 }
 
-.call-back--error {
+.call-back__window.call-back--error {
   animation: shudder 0.4s;
 }
 
@@ -1480,5 +1503,4 @@ input[type="email"].subscribes__input {
 
 .call-back__button {
   padding: 14px 24px;
-  float: right;
 }
